UPLOADING : Uploading challenge SQL

--- a/notebooks/sql/charles_challenge.ipynb
+++ b/notebooks/sql/charles_challenge.ipynb
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1442,37 +1442,25 @@
       "text/plain": [
        "[('Arts Fundraising',),\n",
        " ('Calculus',),\n",
-       " ('Calculus',),\n",
        " ('Circuit Analysis',),\n",
-       " ('Circuit Analysis',),\n",
-       " ('Elementary French ',),\n",
        " ('Elementary French ',),\n",
        " ('Financial Accounting',),\n",
-       " ('Food and Culture',),\n",
        " ('Food and Culture',),\n",
        " ('Foundations of Education',),\n",
        " ('Fundamentals of Marketing ',),\n",
        " ('Greek Civilization',),\n",
        " ('Human Ecology',),\n",
        " ('Introduction to Affective Computing',),\n",
-       " ('Introduction to Affective Computing',),\n",
        " ('Introduction to Law ',),\n",
-       " ('Introduction to Law ',),\n",
-       " ('Introduction to Philosophy',),\n",
        " ('Introduction to Philosophy',),\n",
        " ('Introduction to Professional Writing',),\n",
        " ('Introduction to Programming',),\n",
        " ('Literature and Culture',),\n",
-       " ('Literature and Culture',),\n",
-       " ('Literature and Culture',),\n",
        " ('Network Optimization',),\n",
-       " ('Network Optimization',),\n",
-       " ('World History',),\n",
-       " ('World History',),\n",
        " ('World History',)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1468,7 @@
    "source": [
     "cursor.execute(\n",
     "    '''\n",
-    "    SELECT name\n",
+    "    SELECT DISTINCT(name)\n",
     "    FROM course\n",
     "    ORDER BY name ASC\n",
     "    '''\n",
